test/regression/sema/valid/void_call_stmt.tc
void touch(int x) {
    x + 1;
}

int main() {
    touch(1);
    return 0;
}
