test/regression/sema/invalid/const_runtime_init.tc
int id(int x) {
    return x;
}

int main() {
    const int x = id(1);
    return x;
}
